Neue Bibelstelle Maleachi 3,6 + neue Testideen im Kommentar unten

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -798,7 +798,7 @@
 					</div>
 					<div class="moreinfo">
 						<div class="text">Wer sich für fromm hält, aber seine Zunge nicht zügeln kann, der macht sich selbst etwas vor. Seine Frömmigkeit ist nichts wert.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jakobus1%2C26" target="_blank">Jabobus 1,26 (HFA)</a></div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jakobus1%2C26" target="_blank">Jakobus 1,26 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
 						<div class="text">Genauso unpassend für euch ist schmutziges, dummes und anzügliches Gerede; vielmehr sollt ihr Gott danken.</div>
@@ -1117,6 +1117,10 @@
 						<div class="text">Jesus Christus ist ja immer derselbe – gestern, heute und in alle Ewigkeit.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/Hebr%C3%A4er13%2C8" target="_blank">Hebräer 13,8 (NeÜ)</a></div>
 					</div>
+					<div class="moreinfo">
+						<div class="text"> Ich, der HERR, wandle mich nicht (...)</div>
+						<div class="footer"><a href="https://www.bibleserver.com/LUT/Maleachi3%2C6" target="_blank">Maleachi 3,6a (Lut)</a></div>
+					</div>
 					<!--
 					<div class="moreinfo">
 						<div class="text">(...) nämlich das lebendige und ewig bestehende Wort Gottes.</div>
@@ -1225,6 +1229,61 @@ Kolosser 1,13 (HFA)
 Die rettende Botschaft, die wir bekannt machen, bleibt nur für die dunkel und verhüllt, die verloren gehen.
 Sie hat der Satan, der Herrscher dieser Welt, so verblendet, dass sie nicht glauben. Deshalb sehen sie auch das helle Licht dieser Botschaft nicht, die von Christus und seiner Herrlichkeit spricht. Und doch erkennen wir Gott selbst nur durch Christus, weil dieser Gottes Ebenbild ist.
 2.Korinther 4,3-4 (HFA)
+
+
+Wenn wir uns von unserer sündigen Natur bestimmen lassen, leben wir in Auflehnung gegenüber Gott. Denn die alte Natur ist nicht bereit, sich Gottes Gesetz unterzuordnen. Ja, sie kann das gar nicht.
+Deshalb kann Gott an solchen Menschen kein Gefallen finden.
+Römer 8,7-8 (HFA)
+https://www.bibleserver.com/HFA/R%C3%B6mer8%2C7-8
+
+Seid euch darüber im Klaren: Wer den Geist von Jesus Christus nicht hat, der gehört auch nicht zu ihm.
+Römer 8,9b (HFA)
+https://www.bibleserver.com/HFA/R%C3%B6mer8%2C9
+
+Ja, nach meiner Umkehr packt mich die Reue, / nachdem ich zur Erkenntnis komme, / schlage ich mir an die Brust. / Ich schäme mich und bin auch beschämt
+Jeremia 31,19 (NeÜ)
+https://www.bibleserver.com/Ne%C3%9C/Jeremia31%2C19
+
+Umkehr:
+Hesekiel 3,18 (HFA)
+Hesekiel 33,8 (HFA)
+Maleachi 2,6 (ELB)
+Maleachi 3,8 (NGÜ)
+Matthäus 3,11 (NGÜ)
+Lukas 3,8 (NGÜ) - siehe Maleachi 3,8 (NGÜ)
+Lukas 5,32 (HFA)
+Lukas 24,47 (GNB)
+-- > weiter apg
+
+Dann werdet ihr den HERRN, euren Gott, suchen. Ihr werdet ihn finden, wenn ihr von ganzem Herzen und mit ganzer Hingabe nach ihm fragt.
+5.Mose 4,29 (NGÜ)
+https://www.bibleserver.com/NG%C3%9C/5.Mose4%2C29
+
+Ich gebe euch ein neues Herz und einen neuen Geist. Ich nehme das versteinerte Herz aus eurer Brust und schenke euch ein Herz, das lebt.
+Ich erfülle euch mit meinem Geist und mache aus euch Menschen, die nach meinen Ordnungen leben, die auf meine Gebote achten und sie befolgen.
+Hesekiel 36,26-27 (GNB)
+https://www.bibleserver.com/GNB/Hesekiel36%2C26
+
+Jesus antwortete: »Amen, ich versichere dir: Nur wer von oben her geboren wird, kann Gottes neue Welt zu sehen bekommen.«
+Was Menschen zur Welt bringen, ist und bleibt von menschlicher Art. Von geistlicher Art kann nur sein, was vom Geist Gottes geboren wird.
+Johannes 3,3+6 (GNB)
+https://www.bibleserver.com/GNB/Johannes3%2C3.6
+
+Dagegen bringt der Geist Gottes in unserem Leben nur Gutes hervor: Liebe, Freude und Frieden; Geduld, Freundlichkeit und Güte; Treue,
+Nachsicht und Selbstbeherrschung.
+Galater 5,22-23a (HFA)
+https://www.bibleserver.com/HFA/Galater5%2C22-23
+
+Alle, die sich vom Geist Gottes führen lassen, die sind Gottes Söhne und Töchter.
+Römer 8,14 (GNB)
+https://www.bibleserver.com/GNB/R%C3%B6mer8%2C14
+
+Und wo der Geist des Herrn ist, da ist Freiheit.
+https://www.bibleserver.com/HFA/2.Korinther3%2C17
+2.Korinther 3,17b (HFA)
+
+Der Heilige Geist: Gott in uns
+https://www.erf.de/lesen/glaubens-faq/der-heilige-geist-gott-in-uns/33618-27?mtm_campaign=erf-de-MG-2023-spenden-performance-max&mtm_source=googleAds&mtm_medium=paid&gad_source=1&gclid=Cj0KCQjwgrO4BhC2ARIsAKQ7zUm5PoXbe8CkvOBqYy7cs41hQ4XhXCiEdgVxE1RDJIcXh8vm85BRdrQaAlD-EALw_wcB
 
 
 -->
