neue Bibelstelle zu "Verhalten"

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -696,10 +696,14 @@
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Lukas6%2C36-38" target="_blank">Lukas 6:36-38 (GNB)</a></div>
 					</div>
 					<div class="moreinfo">
+						<div class="text"> Zu einem Freund, dem es schlecht geht, sollte man freundlich sein, selbst dann, wenn er den Allmächtigen nicht mehr fürchtet.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Hiob6%2C14" target="_blank"></a>Hiob 6,14 (NLB)</div>
+					</div>
+					<!--
+					<div class="moreinfo">
 						<div class="text">Gib dem Dummen keine Antwort, die sich auf die Ebene seiner Dummheit begibt, damit die Leute dich nicht selbst für dumm halten! Gib dem Dummen eine Antwort, wie seine Dummheit sie verdient, damit er sich nicht selbst für klug hält!</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Spr%C3%BCche26%2C4-5" target="_blank">Sprüche 26,4-5 (GNB)</a></div>
 					</div>
-					<!--
 					<div class="moreinfo">
 						<div class="text">(..) Wer zwei Hemden hat, soll dem eins geben, der keines hat. Und wer etwas zu essen hat, soll es mit jemand teilen, der hungert.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Lukas3%2C11" target="_blank">Lukas 3:11 (GNB)</a></div>
