3 Bibelstellen zum Thema Heiliger Geist / Feuer

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -966,7 +966,7 @@
 			</div>
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
-					<div class="label">Gott ist ein verzehrendes Feuer</div>
+					<div class="label">Gott ist ein (verzehrendes) Feuer</div>
 				</div>
 				<div class="moreinfos">
 					<div class="moreinfo">
@@ -988,6 +988,18 @@
 					<div class="moreinfo">
 						<div class="text">Ich, der Herrscher der Welt, ich allein bin heilig! Vor mir und keinem anderen sollt ihr erschrecken und euch fürchten!</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Jesaja8%2C13" target="_blank"> Jesaja 11,13 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Ich bin gekommen, um auf der Erde ein Feuer zu entfachen. Wie froh wäre ich, es würde schon brennen!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Lukas12%2C49" target="_blank">Lukas 12,49 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Doch Johannes erklärte öffentlich: »Ich taufe euch mit Wasser, aber nach mir wird ein anderer kommen, (...) Er wird euch mit dem Heiligen Geist und mit Feuer taufen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Lukas3%2C16" target="_blank">Lukas 3,16 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Werdet im Fleiß nicht nachlässig, lasst den Geist Gottes in euch brennen und dient so dem Herrn!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/R%C3%B6mer12" target="_blank">Römer 12,11 (NeÜ)</a></div>
 					</div>
 					<!--
 					<div class="moreinfo">
