2 neue Bibelstellen zum Thema "Gott ändert sich nicht". 2 neue Themen: "Gib alles", "Entspann Dich"

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -1137,6 +1137,18 @@
 						<div class="text"> Ich, der HERR, wandle mich nicht (...)</div>
 						<div class="footer"><a href="https://www.bibleserver.com/LUT/Maleachi3%2C6" target="_blank">Maleachi 3,6a (Lut)</a></div>
 					</div>
+					<div class="moreinfo">
+						<div class="text">HERR, dein Wort bleibt für immer und ewig – so unverrückbar wie der Himmel hat es Bestand.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Psalm119%2C89" target="_blank">Psalm 119,89 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Himmel und Erde werden vergehen; meine Worte aber haben für immer Bestand.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Matth%C3%A4us24%2C35" target="_blank">Matthäus 24,35 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
 					<!--
 					<div class="moreinfo">
 						<div class="text">(...) nämlich das lebendige und ewig bestehende Wort Gottes.</div>
@@ -1179,6 +1191,88 @@
 					<div class="moreinfo">
 						<div class="text">Vergeltet Böses nicht mit Bösem, und gebt Beleidigungen nicht wieder zurück! Im Gegenteil, segnet eure Beleidiger, denn Gott hat euch dazu berufen, seinen Segen zu empfangen.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/1.Petrus3%2C9" target="_blank">1.Petrus 3,9 (GNB)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
+				</div>
+			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Gib alles</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Die Tür zu Gottes neuer Welt ist eng; kämpft darum, dass ihr Einlass findet! Denn viele, sage ich euch, werden sich am Ende darum bemühen, aber es nicht mehr schaffen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Lukas13%2C24" target="_blank">Lukas 13,24 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Wenn einer mit mir gehen will, so muss ich für ihn wichtiger sein als seine Eltern, seine Frau, seine Kinder, seine Geschwister, ja wichtiger als das eigene Leben. Sonst kann er nicht mein Jünger sein. Wer nicht bereit ist, sein Kreuz auf sich zu nehmen und mir nachzufolgen, der kann nicht mein Jünger sein.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Lukas14%2C26-27" target="_blank">Lukas 14,26-27 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Überlegt auch ihr vorher, ob ihr wirklich bereit seid, alles für mich aufzugeben und mir nachzufolgen. Sonst könnt ihr nicht meine Jünger sein.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Lukas14%2C33" target="_blank">Lukas 14,33 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Alle Reben am Weinstock, die keine Trauben tragen, schneidet er ab. Aber die Frucht tragenden Reben beschneidet er sorgfältig, damit sie noch mehr Frucht bringen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Johannes15%2C2" target="_blank">Johannes 15,2 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Meine Kinder, unsere Liebe darf nicht nur aus schönen Worten bestehen. Sie muss sich in Taten zeigen, die der Wahrheit entsprechen: der Liebe, die Gott uns erwiesen hat.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/1.Johannes3%2C18" target="_blank">1.Johannes 3,18 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Deshalb setzt alles daran, dass euer Glaube sich in einem vorbildlichen Leben auswirkt. Ein solches Leben wird dazu führen, dass ihr Gott immer besser kennen lernt.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/2.Petrus1%2C5" target="_blank">2.Petrus 1,5 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Genauso nämlich, wie der Körper ohne den Geist ein toter Körper ist, ist auch der Glaube ohne Taten ein toter Glaube.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NG%C3%9C/Jakobus2%2C26" target="_blank">Jakobus 2,26 (NGÜ)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
+				</div>
+			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Entspann Dich</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Nicht ihr habt mich erwählt, sondern ich habe euch erwählt. Ich habe euch dazu bestimmt, reiche Frucht zu bringen, Frucht, die Bestand hat. Darum gilt auch: Alles, was ihr vom Vater in meinem Namen, unter Berufung auf mich, erbittet, wird er euch geben.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Johannes15%2C16" target="_blank">Johannes 15,16 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Wirkliche Liebe ist frei von Angst. Ja, wenn Gottes vollkommene Liebe uns erfüllt, vertreibt sie sogar die Angst. Wer sich also fürchtet und vor der Strafe zittert, bei dem ist Gottes Liebe noch nicht zum Ziel gekommen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Johannes4%2C18" target="_blank">1.Johannes 4,18 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Geh hin, iss dein Brot mit Freude und trink deinen Wein mit frohem Herzen! Denn längst hat Gott Wohlgefallen an deinem Tun.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/ELB/Prediger9%2C7" target="_blank">Prediger 9,7 (ELB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Es ist vergeblich, vom frühen Morgen bis in die späte Nacht hart zu arbeiten, immer in Sorge, ob ihr genug zu essen habt, denn denen, die Gott lieben, gibt er es im Schlaf.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Psalm127%2C2" target="_blank">Psalm 127,2 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Denn Gott hat sie schon vor Beginn der Zeit auserwählt und hat sie vorbestimmt, seinem Sohn gleich zu werden, damit sein Sohn der Erstgeborene unter vielen Geschwistern werde.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/R%C3%B6mer8%2C29" target="_blank">Römer 8,29 (NLB)</a></div>
 					</div>
 					<!--
 					<div class="moreinfo">
