neue Bibelstelle Offenbarung 3,2 (NGÜ) bei "Gib Alles"

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -1237,6 +1237,10 @@
 						<div class="text">Genauso nämlich, wie der Körper ohne den Geist ein toter Körper ist, ist auch der Glaube ohne Taten ein toter Glaube.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NG%C3%9C/Jakobus2%2C26" target="_blank">Jakobus 2,26 (NGÜ)</a></div>
 					</div>
+					<div class="moreinfo">
+						<div class="text">Wach auf und stärke, was noch am Leben ist, damit es nicht auch stirbt. Denn ich musste feststellen, dass das, was du tust, nicht vor meinem Gott bestehen kann.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NG%C3%9C/Offenbarung3%2C2" target="_blank">Offenbarung 3,2 (NGÜ)</a></div>
+					</div>
 					<!--
 					<div class="moreinfo">
 						<div class="text"></div>
