Bibelstellen: Neues Thema "Älteste/Leitung" mit 3 Bibelstellen

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -1290,6 +1290,35 @@
 					-->
 				</div>
 			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Ältestenschaft / Leitung</div>
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Darum kommt als Gemeindeleiter nur jemand in Frage, der ein untadeliges Leben führt. Er muss seiner Frau treu sein und sich durch Besonnenheit und Verantwortungsbewusstsein auszeichnen. Sein Verhalten darf keinen Anstoß erregen, er muss gastfreundlich sein, und er muss fähig sein zu lehren.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NG%C3%9C/1.Timotheus3%2C2" target="_blank">1.Timotheus 3,2 (NGÜ)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Sorgt für die Gemeinde Gottes, die euch anvertraut ist, wie ein Hirte für seine Herde. Seht in der Verantwortung, die ihr für sie habt, nicht eine lästige Pflicht, sondern nehmt sie bereitwillig wahr als einen Auftrag, den Gott euch gegeben hat. Seid nicht darauf aus, euch zu bereichern, sondern übt euren Dienst mit selbstloser Hingabe aus. Spielt euch nicht als Herren der ´Gemeinden` auf, die Gott euch zugewiesen hat, sondern seid ein Vorbild für die Herde.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NG%C3%9C/1.Petrus5%2C2-3" target="_blank">1.Petrus 5,2-3 (NGÜ)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Da sagte ihnen Jesus: »In dieser Welt unterdrücken die Herrscher ihre Völker, und rücksichtslose Machthaber lassen sich als Wohltäter feiern. Aber bei euch soll es nicht so sein. Im Gegenteil: Der Erste unter euch soll sich allen anderen unterordnen, und wer euch führen will, muss allen dienen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Lukas22%2C25-26" target="_blank">Lukas 22,25-26 (HFA)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
+				</div>
+			</div>
 			<!--
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
