Neue Bibelstelle (2.Timotheus2,24-25) zu Ältestenschaft

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -1307,6 +1307,10 @@
 						<div class="text">Da sagte ihnen Jesus: »In dieser Welt unterdrücken die Herrscher ihre Völker, und rücksichtslose Machthaber lassen sich als Wohltäter feiern. Aber bei euch soll es nicht so sein. Im Gegenteil: Der Erste unter euch soll sich allen anderen unterordnen, und wer euch führen will, muss allen dienen.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Lukas22%2C25-26" target="_blank">Lukas 22,25-26 (HFA)</a></div>
 					</div>
+					<div class="moreinfo">
+						<div class="text">Und wer ein Diener des Herrn sein will, darf nicht streiten, sondern soll zu allen freundlich sein. Er muss fähig sein, die Lehre ´des Evangeliums` weiterzugeben, muss es gelassen ertragen können, wenn ihm Unrecht zugefügt wird, und soll denen, die sich gegen ´das Evangelium` stellen, geduldig den rechten Weg zeigen. </div>
+						<div class="footer"><a href="https://www.bibleserver.com/NG%C3%9C/2.Timotheus2%2C24-25" target="_blank"></a>2.Timotheus 2,24-25 (NGÜ)</div>
+					</div>
 					<!--
 					<div class="moreinfo">
 						<div class="text"></div>
