neue Bibelstelle zum Thema "Regierung/Gehorsam": 1.Petrus 2,13-14 (NLB)

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -477,6 +477,10 @@
 				</div>
 				<div class="moreinfos">
 					<div class="moreinfo">
+						<div class="text">Ordnet euch den staatlichen Gewalten unter, denn das entspricht dem Willen Gottes: sei es dem König als Staatsoberhaupt oder den Beamten, die er ernannt hat. Denn der König hat sie geschickt, um die zu bestrafen, die unrecht tun, und diejenigen zu ehren, die Gutes tun!</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/1.Petrus2%2C13-14" target="_blank">1.Petrus 2,13-14 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
 						<div class="text">(...) habt Ehrfurcht vor Gott und ehrt auch den König!</div>
 						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/1.Petrus2%2C17" target="_blank">1.Petrus 2,17 (NeÜ)</a></div>
 					</div>
