2 weitere Bibelstellen zum Thema Dank_ Psalm 50,23 und Kolosser 3,17

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -145,8 +145,16 @@
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Psalm50%2C14" target="_blank">Psalm 50,14 (NLB)</a></div>
 					</div>
 					<div class="moreinfo">
+						<div class="text">Wer mir Dank sagt, bringt mir ein Opfer, das mich wirklich ehrt. Wer auf dem Weg bleibt, der erfährt meine Rettung.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/NLB/Psalm50%2C23" target="_blank">Psalm 50,23 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
 						<div class="text">Gott, die Völker sollen dir danken, alle Völker sollen dich loben.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/NLB/Psalm67%2C4" target="_blank">Psalm 67,4 (NLB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Alles, was ihr tut und was ihr sagt, soll zu erkennen geben, dass ihr Jesus, dem Herrn, gehört. Euer ganzes Leben soll ein einziger Dank sein, den ihr Gott, dem Vater, durch Jesus Christus darbringt.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Kolosser3%2C17" target="_blank">Kolosser 3,17 (GNB)</a></div>
 					</div>
 					<div class="moreinfo">
 						<div class="text">Lasst euch durch nichts vom Gebet abbringen und vergesst dabei nicht, Gott zu danken.</div>
