Rettung --> Rettung I + Rettung II + Ewiges Leben

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -1056,7 +1056,7 @@
 			</div>
 			<div class="btnframe">
 				<div class="btn" onclick="toggleBtn(this)">
-					<div class="label">Rettung</div> <!-- KW17 2024 -->
+					<div class="label">Rettung I (Vergangenheit)</div> <!-- KW17 2024 -->
 				</div>
 				<div class="moreinfos">
 					<div class="moreinfo">
@@ -1064,12 +1064,41 @@
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Apostelgeschichte4%2C12" target="_blank">Apostelgeschichte 4:12 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text">Und weil Jesus Christus ewig lebt und für uns bei Gott eintritt, wird er auch alle endgültig retten, die durch ihn zu Gott kommen.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/Hebr%C3%A4er7%2C25" target="_blank">Hebräer 7,25 (HFA)</a></div>
+						<div class="text">Durch Christus, der sein Blut am Kreuz vergossen hat, sind wir erlöst, sind unsere Sünden vergeben. Und das verdanken wir allein Gottes unermesslich großer Gnade.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Epheser1%2C7" target="_blank">Epheser 1,7 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
 						<div class="text">Eure Rettung ist wirklich reine Gnade, und ihr empfangt sie allein durch den Glauben. Ihr selbst habt nichts dazu getan, sie ist Gottes Geschenk. Ihr habt sie nicht durch irgendein Tun verdient; denn niemand soll sich mit irgendetwas rühmen können.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Epheser2%2C8-9" target="_blank">Epheser 2,8-9 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Lasst eure Rettung deshalb von niemandem in Frage stellen. Schon gar nicht von solchen Leuten, die sich in falsch verstandener Demut gefallen, Engel zu verehren, und sich dabei stolz auf ihre Visionen berufen! (...)</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Kolosser2%2C18" target="_blank">Kolosser 2,18 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Alle, die auf mein Wort hören und dem glauben, der mich gesandt hat, haben das ewige Leben. Sie kommen nicht mehr vor Gottes Gericht; sie haben den Tod schon hinter sich gelassen und das unvergängliche Leben erreicht.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Johannes5%2C24" target="_blank">Johannes 5,24 (GNB)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
+				</div>
+			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Rettung II (Zukunft)</div> <!-- KW17 2024 -->
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Und weil Jesus Christus ewig lebt und für uns bei Gott eintritt, wird er auch alle endgültig retten, die durch ihn zu Gott kommen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Hebr%C3%A4er7%2C25" target="_blank">Hebräer 7,25 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
 						<div class="text">(...) Ihr glaubt an ihn, obwohl ihr ihn auch jetzt nicht sehen könnt, und eure Freude ist herrlich, ja, grenzenlos, denn ihr wisst, dass ihr das Ziel eures Glaubens erreichen werdet: die Rettung für alle Ewigkeit.</div>
@@ -1084,8 +1113,58 @@
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Philipper2%2C12" target="_blank">Philipper 2,12 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text">Lasst eure Rettung deshalb von niemandem in Frage stellen. Schon gar nicht von solchen Leuten, die sich in falsch verstandener Demut gefallen, Engel zu verehren, und sich dabei stolz auf ihre Visionen berufen! (...)</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/Kolosser2%2C18" target="_blank">Kolosser 2,18 (HFA)</a></div>
+						<div class="text">Ihn hat Gott uns als ersten Anteil an unserem himmlischen Erbe gegeben, und dieser Geist verbürgt uns das vollständige Erbe, die vollkommene Erlösung. Dann werden wir Gott in seiner Herrlichkeit loben und preisen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Epheser1%2C14" target="_blank">Epheser 1,14 (HFA)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
+				</div>
+			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Ewiges Leben I (habe ich schon)</div> <!-- KW17 2024 -->
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Alle, die auf mein Wort hören und dem glauben, der mich gesandt hat, haben das ewige Leben. Sie kommen nicht mehr vor Gottes Gericht; sie haben den Tod schon hinter sich gelassen und das unvergängliche Leben erreicht.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Johannes5%2C24" target="_blank">Johannes 5,24 (GNB)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Und was bedeutet das für uns? Es besagt: Gott hat uns ewiges Leben geschenkt, das Leben, das in seinem Sohn ist.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/1.Johannes5%2C11" target="_blank">1.Johannes 5,11 (NeÜ)</a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text">Ich habe euch das alles geschrieben, damit ihr wisst, dass ihr das ewige Leben habt, denn ihr glaubt ja an Jesus, den Sohn Gottes.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/Ne%C3%9C/1.Johannes5%2C13" target="_blank">1.Johannes 5,13 (NeÜ)</a></div>
+					</div>
+					<!--
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					<div class="moreinfo">
+						<div class="text"></div>
+						<div class="footer"><a href="" target="_blank"></a></div>
+					</div>
+					-->
+				</div>
+			</div>
+			<div class="btnframe">
+				<div class="btn" onclick="toggleBtn(this)">
+					<div class="label">Ewiges Leben II (hoffe ich drauf)</div> <!-- KW17 2024 -->
+				</div>
+				<div class="moreinfos">
+					<div class="moreinfo">
+						<div class="text">Kämpfe den guten Kampf des Glaubens! Erringe so das ewige Leben. Dazu hat dich Gott berufen, und das hast du vor vielen Zeugen bekannt.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Timotheus6%2C12" target="_blank">1.Timotheus 6,12 (HFA)</a></div>
 					</div>
 					<!--
 					<div class="moreinfo">
