Bibelstellen zur Rettung überarbeitet

--- a/web/Bibelstellen.html
+++ b/web/Bibelstellen.html
@@ -1060,8 +1060,8 @@
 				</div>
 				<div class="moreinfos">
 					<div class="moreinfo">
-						<div class="text">Nur Jesus kann den Menschen Rettung bringen. Nichts und niemand sonst auf der ganzen Welt rettet uns.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/Apostelgeschichte4%2C12" target="_blank">Apostelgeschichte 4:12 (HFA)</a></div>
+						<div class="text">Denn er hat uns aus der Gewalt der dunklen Mächte gerettet und uns unter die Herrschaft seines geliebten Sohnes gestellt.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/Kolosser1%2C13" target="_blank">Kolosser 1,13 (GNB)</a></div>
 					</div>
 					<div class="moreinfo">
 						<div class="text">Durch Christus, der sein Blut am Kreuz vergossen hat, sind wir erlöst, sind unsere Sünden vergeben. Und das verdanken wir allein Gottes unermesslich großer Gnade.</div>
@@ -1072,14 +1072,14 @@
 						<div class="footer"><a href="https://www.bibleserver.com/GNB/Epheser2%2C8-9" target="_blank">Epheser 2,8-9 (GNB)</a></div>
 					</div>
 					<div class="moreinfo">
-						<div class="text">Lasst eure Rettung deshalb von niemandem in Frage stellen. Schon gar nicht von solchen Leuten, die sich in falsch verstandener Demut gefallen, Engel zu verehren, und sich dabei stolz auf ihre Visionen berufen! (...)</div>
+						<div class="text">Lasst eure Rettung deshalb von niemandem in Frage stellen. (...)</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Kolosser2%2C18" target="_blank">Kolosser 2,18 (HFA)</a></div>
 					</div>
-					<div class="moreinfo">
-						<div class="text">Alle, die auf mein Wort hören und dem glauben, der mich gesandt hat, haben das ewige Leben. Sie kommen nicht mehr vor Gottes Gericht; sie haben den Tod schon hinter sich gelassen und das unvergängliche Leben erreicht.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/GNB/Johannes5%2C24" target="_blank">Johannes 5,24 (GNB)</a></div>
-					</div>
 					<!--
+					<div class="moreinfo">
+						<div class="text">Nur Jesus kann den Menschen Rettung bringen. Nichts und niemand sonst auf der ganzen Welt rettet uns.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Apostelgeschichte4%2C12" target="_blank">Apostelgeschichte 4:12 (HFA)</a></div>
+					</div>
 					<div class="moreinfo">
 						<div class="text"></div>
 						<div class="footer"><a href="" target="_blank"></a></div>
@@ -1097,26 +1097,26 @@
 				</div>
 				<div class="moreinfos">
 					<div class="moreinfo">
-						<div class="text">Und weil Jesus Christus ewig lebt und für uns bei Gott eintritt, wird er auch alle endgültig retten, die durch ihn zu Gott kommen.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/Hebr%C3%A4er7%2C25" target="_blank">Hebräer 7,25 (HFA)</a></div>
-					</div>
-					<div class="moreinfo">
-						<div class="text">(...) Ihr glaubt an ihn, obwohl ihr ihn auch jetzt nicht sehen könnt, und eure Freude ist herrlich, ja, grenzenlos, denn ihr wisst, dass ihr das Ziel eures Glaubens erreichen werdet: die Rettung für alle Ewigkeit.</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/1.Petrus1%2C8-9" target="_blank">1.Petrus 1,8-9 (HFA)</a></div>
-					</div>
-					<div class="moreinfo">
-						<div class="text">So spricht der HERR, der heilige Gott Israels: »Kehrt doch um zu mir und werdet ruhig, dann werdet ihr gerettet! Vertraut mir und habt Geduld, dann seid ihr stark! (...)</div>
-						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jesaja30%2C15" target="_blank">Jesaja 30,15 (HFA)</a></div>
+						<div class="text">Denn ihr wisst, dass euer Vertrauen, euer Glaube, euch die endgültige Rettung bringen wird.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/GNB/1.Petrus1%2C9" target="_blank">1.Petrus 1,9 (GNB)</a></div>
 					</div>
 					<div class="moreinfo">
 						<div class="text">(...) Arbeitet mit Furcht und Zittern an eurer Rettung.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Philipper2%2C12" target="_blank">Philipper 2,12 (HFA)</a></div>
 					</div>
 					<div class="moreinfo">
+						<div class="text">Und weil Jesus Christus ewig lebt und für uns bei Gott eintritt, wird er auch alle endgültig retten, die durch ihn zu Gott kommen.</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Hebr%C3%A4er7%2C25" target="_blank">Hebräer 7,25 (HFA)</a></div>
+					</div>
+					<div class="moreinfo">
 						<div class="text">Ihn hat Gott uns als ersten Anteil an unserem himmlischen Erbe gegeben, und dieser Geist verbürgt uns das vollständige Erbe, die vollkommene Erlösung. Dann werden wir Gott in seiner Herrlichkeit loben und preisen.</div>
 						<div class="footer"><a href="https://www.bibleserver.com/HFA/Epheser1%2C14" target="_blank">Epheser 1,14 (HFA)</a></div>
 					</div>
 					<!--
+					<div class="moreinfo">
+						<div class="text">So spricht der HERR, der heilige Gott Israels: »Kehrt doch um zu mir und werdet ruhig, dann werdet ihr gerettet! Vertraut mir und habt Geduld, dann seid ihr stark! (...)</div>
+						<div class="footer"><a href="https://www.bibleserver.com/HFA/Jesaja30%2C15" target="_blank">Jesaja 30,15 (HFA)</a></div>
+					</div>
 					<div class="moreinfo">
 						<div class="text"></div>
 						<div class="footer"><a href="" target="_blank"></a></div>
